<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_root_edit"
...
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emojiScrollView"
            app:layout_constraintVertical_bias="0.031" />

        <EditText
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
...
            android:textColor="#FDFAFA"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeButton"
            app:layout_constraintVertical_bias="0.038" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:scaleType="fitCenter"
            android:src="@drawable/calendar"
            app:layout_constraintEnd_toEndOf="@id/date"
            app:layout_constraintTop_toTopOf="@id/date" />

        <RadioButton
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/use_current_date"
            android:textColor="#F8F4F4"
            android:textStyle="bold"
...
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@id/private_question"
            app:layout_constraintTop_toBottomOf="@id/alone_social" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="@font/inter"
            android:text="@string/submit"
...
