...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    android:background="#222121">


    <ImageButton
        android:id="@+id/grid_button"
        android:layout_width="69dp"
...
        android:backgroundTint="#222121"
        android:contentDescription="@string/open_follow_requests"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilepage"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:tint="#F8F5F5" />

    <ImageButton
        android:id="@+id/profilepage"
        android:layout_width="69dp"
...
